# bt_client

./: CMakeLists.txt  package.xml
bt_xml/: explore_environment.xml  navigation.xml  navigation_timeout.xml  navigation_with_fallback.xml  task6.xml  task7temp.xml
config/: locations.yaml
include/: FollowAruco.hpp  GenerateNextDestination.hpp  MoveTo.hpp  MoveToWithTimeout.hpp  isExplorationComplete.hpp  isGoalReachable.hpp
launch/: bt.launch.py
src/: FollowAruco.cpp  GenerateNextDestination.cpp  MoveTo.cpp  MoveToWithTimeout.cpp  isExplorationComplete.cpp  isGoalReachable.cpp  main.cpp  moveto_action.cpp
